# bgsim

./: CMakeLists.txt
bgcbtlib/: AnalysisReport.cpp  Arena.cpp  BattleReport.cpp  CMakeLists.txt
bgcbtlib/include/: AnalysisReport.h  Arena.h  BattleReport.h  BattleStatus.h
bgcbtlib/tests/: CMakeLists.txt  test_arena.cpp  test_arena_analysis.cpp  test_arena_battle.cpp
bgcomlib/: Board.cpp  CMakeLists.txt  CardDb.cpp  Discovers.cpp  Effect.cpp  Enchantment.cpp  Game.cpp  Hand.cpp  IPrintable.h  Minion.cpp  Player.cpp  Pool.cpp  Random.cpp
bgcomlib/card/: Card.cpp  CardDb.cpp  Enchantment.cpp  Minion.cpp
bgcomlib/include/: Board.h  CardLoc.h  Discovers.h  Effect.h  Game.h  Hand.h  Keyword.h  Minion.h  MinionLoc.h  Player.h  Pool.h  Race.h  Target.h
bgcomlib/include/card/: Card.h  CardDb.h  Enchantment.h  Minion.h
bgcomlib/include/util/: BitVector.h  Random.h
bgcomlib/rsc/: enchantments.json  minions.json
bgcomlib/tests/: CMakeLists.txt  test_board.cpp  test_carddb.cpp  test_minion.cpp  test_pool.cpp
bgcomlib/util/: Random.cpp
bgsim-client/: CMakeLists.txt
bgsim-server/: CMakeLists.txt  Game.h
